# coconut-palm-status-on-Guam

./: .gitignore  Notes and References for Guam Coconut Palm Conservationwards-a-conservation-plan-for-coconut-palms-on Guam.mdmiscellaneous-notes.md  README.md  main.py  pyproject.toml
code/: generate-usfs-fia-plots.ipynb
notes/: FIA-survey-results.md  Notes_and_References_for_Guam_Coconut_Palm_Conservation.md  miscellaneous-notes  notes-and-references.md  references.odt  towards-a-conservation-plan-for-coconut-palms-on Guam.mdmiscellaneous-notes.md
secrets/: Trongkon Niyok Species Account.docx  Trongkon Niyok Species Account.odt
